--- a/playbooks/common/openshift-master/config.yml
+++ b/playbooks/common/openshift-master/config.yml
@@ -238,7 +238,7 @@
     - name: atomic-openshift-api
       mode: tcp
       option: tcplog
-      balance: roundrobin
+      balance: source
       servers: "{{ hostvars.localhost.haproxy_backend_servers }}"
   roles:
   - role: haproxy
