--- a/roles/openshift_master/handlers/main.yml
+++ b/roles/openshift_master/handlers/main.yml
@@ -7,6 +7,8 @@
   service: name={{ openshift.common.service_type }}-master-api state=restarted
   when: openshift_master_ha | bool
 
+# TODO: need to fix up ignore_errors here
 - name: restart master controllers
   service: name={{ openshift.common.service_type }}-master-controllers state=restarted
   when: openshift_master_ha | bool
+  ignore_errors: yes
