--- a/roles/os_zabbix/vars/template_heartbeat.yml
+++ b/roles/os_zabbix/vars/template_heartbeat.yml
@@ -8,5 +8,5 @@ g_template_heartbeat:
     key: heartbeat.ping
   ztriggers:
   - description: 'Heartbeat.ping has failed on {HOST.NAME}'
-    expression: '{Template Heartbeat:heartbeat.ping.last()}<>0'
+    expression: '{Template Heartbeat:heartbeat.ping.nodata(20m)}=1'
     priority: avg
