--- a/playbooks/adhoc/atomic_openshift_tutorial_reset.yml
+++ b/playbooks/adhoc/atomic_openshift_tutorial_reset.yml
@@ -61,12 +61,15 @@
 
     - shell: docker ps -a -q | xargs docker stop
       changed_when: False
+      failed_when: False
 
     - shell: docker ps -a -q| xargs docker rm
       changed_when: False
+      failed_when: False
 
     - shell:  docker images -q |xargs docker rmi
       changed_when: False
+      failed_when: False
 
     - file: path={{ item }} state=absent
       with_items:
