--- a/roles/os_zabbix/vars/template_os_linux.yml
+++ b/roles/os_zabbix/vars/template_os_linux.yml
@@ -102,6 +102,11 @@ g_template_os_linux:
     - Memory
     value_type: int
 
+  - key: mem.util.available
+    applications:
+    - Memory
+    value_type: int
+
   - key: mem.util.used
     applications:
     - Memory
